--- a/trees.ipynb
+++ b/trees.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPMh7cOrcAwUdpJU7yMeLwd",
+      "authorship_tag": "ABX9TyOymekCp9ZxM7B+ykqApCVS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -217,7 +217,7 @@
         "    self.left = None\n",
         "    self.right = None\n",
         "\n",
-        "class bst:\n",
+        "class BST:\n",
         "  def __init__(self):\n",
         "    self.root = None\n",
         "\n",
@@ -231,89 +231,80 @@
         "    return root\n",
         "\n",
         "\n",
-        "  def search(self,root,value):\n",
-        "    if root is None or root.data == value:\n",
-        "      return root\n",
-        "    if value < root.data:\n",
-        "      if value == root.data:\n",
-        "        print(\"present\")\n",
-        "      return self.search(root.left,value)\n",
-        "    elif value > root.data:\n",
-        "      return self.search(root.right,value)\n",
-        "    else :\n",
-        "      print(\"not present\")\n",
-        "      return None\n",
+        "  def search(self, root, value):\n",
+        "        if root is None:\n",
+        "            return None\n",
+        "        if value == root.data:\n",
+        "            return root\n",
+        "        elif value < root.data:\n",
+        "            return self.search(root.left, value)\n",
+        "        else:\n",
+        "            return self.search(root.right, value)\n",
         "\n",
         "\n",
-        "  def inorder(node):\n",
+        "  def inorder(self ,node):\n",
         "    if node:\n",
-        "      inorder(node.left)\n",
+        "      self.inorder(node.left)\n",
         "      print(node.data , end = ' ')\n",
-        "      inorder(node.right)\n",
+        "      self.inorder(node.right)\n",
         "\n",
-        "  def preorder(node):\n",
+        "  def preorder(self ,node):\n",
         "    if node:\n",
         "      print(node.data , end = ' ')\n",
-        "      preorder(node.left)\n",
-        "      preorder(node.right)\n",
+        "      self.preorder(node.left)\n",
+        "      self.preorder(node.right)\n",
         "\n",
         "\n",
-        "  def postorder(node):\n",
-        "    if node:\n",
-        "      postorder(node.left)\n",
-        "      postorder(node.right)\n",
-        "      print(node.data , end = ' ')\n",
+        "  def postorder(self, node):\n",
+        "        if node:\n",
+        "            self.postorder(node.left)\n",
+        "            self.postorder(node.right)\n",
+        "            print(node.data, end=' ')\n",
         "\n",
         "\n",
-        "my_bst = bst()\n",
+        "my_bst = BST()\n",
         "root = None\n",
         "\n",
         "for value in [50,30,70,20,40,60,80]:\n",
-        "  root = bst.insert(root,value)\n",
+        "  my_bst.root = my_bst.insert(my_bst.root,value)\n",
         "\n",
         "\n",
-        "# Traversals\n",
         "print(\"Inorder: \", end='')\n",
-        "bst.inorder(root)\n",
+        "my_bst.inorder(my_bst.root)   # Output: 20 30 40 50 60 70 80\n",
+        "\n",
         "print(\"\\nPreorder: \", end='')\n",
-        "bst.preorder(root)\n",
+        "my_bst.preorder(my_bst.root) # Output: 50 30 20 40 70 60 80\n",
+        "\n",
         "print(\"\\nPostorder: \", end='')\n",
-        "# Output: 20 40 30 60 80 70 50\n",
-        "\n",
-        "# Output: 20 30 40 50 60 70 80\n",
-        "\n",
-        "# Output: 50 30 20 40 70 60 80\n",
-        "\n",
-        "bst.postorder(root)\n",
+        "my_bst.postorder(my_bst.root) # Output: 20 40 30 60 80 70 50\n",
         "\n",
         "# Search\n",
         "key = 40\n",
-        "found = bst.search(root, key)\n",
-        "print(f\"\\nSearch {key}: {'Found' if found else 'Not Found' }\")\n",
+        "found = my_bst.search(my_bst.root, key)\n",
+        "print(f\"\\nSearch {key}: {'Found' if found else 'Not Found'}\")\n",
         "\n",
         "key = 10\n",
-        "found = bst.search(root, key)\n",
-        "print(f\"\\nSearch {key}: {'Found' if found else 'Not Found' }\")"
+        "found = my_bst.search(my_bst.root, key)\n",
+        "print(f\"Search {key}: {'Found' if found else 'Not Found'}\")\n"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 219
+          "base_uri": "https://localhost:8080/"
         },
         "id": "3E00MG4Yub0L",
-        "outputId": "d7bda5cf-e2f4-42df-b1d2-f768dd28ced6"
+        "outputId": "27509b73-51e3-4475-f92a-72404f1e4d31"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "bst.insert() missing 1 required positional argument: 'value'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-597876122.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m70\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m40\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m80\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m   \u001b[0mroot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: bst.insert() missing 1 required positional argument: 'value'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Inorder: 20 30 40 50 60 70 80 \n",
+            "Preorder: 50 30 20 40 70 60 80 \n",
+            "Postorder: 20 40 30 60 80 70 50 \n",
+            "Search 40: Found\n",
+            "Search 10: Not Found\n"
           ]
         }
       ]
